:factory: Corrects `img` alignment

--- a/_sass/minima/custom-styles.scss
+++ b/_sass/minima/custom-styles.scss
@@ -2,5 +2,8 @@
 // @See {link} https://github.com/jekyll/minima/blob/master/_sass/minima/_base.scss
 img {
   height: auto;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
 }
 
